2002-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/debug.c (debug_open); Don't try to renmae an already
	  renamed file.

2002-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.c (dump_configuration): Print multiple
	  exclude and include.

2002-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (add_exclude, add_include): Typo.

2002-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (build_include, build_exclude): Fix for
	  bad eof detection.

2002-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (get_name): Create a file name.
	* client-src/client_util.c (build_name): Remove old files,
	  build an unused file name.
	* client-src/client_util.c (add_exclude): Add an exclude pattern to
	  the exclude file.
	* client-src/client_util.c (add_include): Add an include to the
	  include file.
	* client-src/client_util.c (build_exclude): Concat all excludes in
	  one file.
	* client-src/client_util.c (build_include): Concat all includes in
	  one file.
	* client-src/client_util.h (build_exclude, build_include): Prototype.
	* client-src/selfcheck.c.diff (check_options): Call build_exclude
	  and build_include.
	* client-src/sendsize.c.diff: Call gtar with one
	  exclude file/include file.
	* client-src/sendbackup-gnutar.c.diff: Call gtar with one
	  exclude file/include file.

2002-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/amanda.h (amfree): Change e local variable to e__errno.
	* common-src/amanda.h (strappend): Change t local variable to t_t_t.

2002-02-14  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/sendsize.c: Set include_file and include_list to NULL
	  when using old protocol.
	* client-src/sendbackup-gnutar.c: Include "." when using old protocol.

2002-02-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
