@@ -1,5 +1,9 @@
 2002-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
+	* client-src/client-util.c (add_include): Include are glob expression.
+
+2002-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
 	* common-src/debug.c (debug_open); Don't try to renmae an already
 	  renamed file.
 
